--- a/package.json
+++ b/package.json
@@ -22,5 +22,10 @@
   "bugs": {
     "url": "https://github.com/kharioki/Passgen/issues"
   },
-  "homepage": "https://github.com/kharioki/Passgen#readme"
+  "homepage": "https://github.com/kharioki/Passgen#readme",
+  "dependencies": {
+    "chalk": "^4.1.2",
+    "clipboardy": "^2.3.0",
+    "commander": "^8.2.0"
+  }
 }
